--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
-  "name": "personal-website-v3",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1"
-  }
+    "name": "personal-website-v3",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "framer-motion": "^7.5.3",
+        "next": "12.3.1",
+        "next-themes": "^0.2.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "sass": "^1.55.0"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.12",
+        "eslint": "8.25.0",
+        "eslint-config-next": "12.3.1",
+        "postcss": "^8.4.18",
+        "tailwindcss": "^3.1.8"
+    },
+    "prettier": {
+        "tabWidth": 4,
+        "singleQuote": false
+    }
 }
